--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-		<title>KW Shoe Repair</title>
+		<title>Youtube AI Chatbot</title>
 		<link rel="stylesheet" href="index.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
